add bmp files to link

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -14,6 +14,7 @@ OBJDUMP = ../$(COMPILER_PATH)/$(COMPILER_ARCH)objdump
 GDB = ../$(COMPILER_PATH)/$(COMPILER_ARCH)gdb
 NASM = /usr/bin/nasm
 
+BMP_SOURCES = $(shell find ./ -type f -name '*.bmp')
 PSF_SOURCES = $(shell find ./ -type f -name '*.psf')
 ASM_SOURCES = $(shell find ./ -type f -name '*.asm')
 S_SOURCES = $(shell find ./ -type f -name '*.s')
@@ -23,7 +24,7 @@ CPP_SOURCES = $(shell find ./ -type f -name '*.cpp')
 MAKE_DEPS_SOURCES = $(shell find ./ -type f -name '*.d')
 HEADERS = $(sort $(dir $(wildcard ./include/*)))
 HEADERS2 = $(sort $(dir $(wildcard ../include/*)))
-OBJ = $(C_SOURCES:.c=.o) $(CPP_SOURCES:.cpp=.o) $(ASM_SOURCES:.asm=.o) $(S_SOURCES:.s=.o) $(SS_SOURCES:.S=.o) $(PSF_SOURCES:.psf=.o)
+OBJ = $(C_SOURCES:.c=.o) $(CPP_SOURCES:.cpp=.o) $(ASM_SOURCES:.asm=.o) $(S_SOURCES:.s=.o) $(SS_SOURCES:.S=.o) $(PSF_SOURCES:.psf=.o) $(BMP_SOURCES:.bmp=.o)
 INCLUDE_DIR = ./include
 INCLUDE_DIR2 = ../include
 KERNEL = kernel.fsys
@@ -89,6 +90,10 @@ $(KERNEL): $(OBJ)
 
 # I don't understand how incbin works but, I can use this, is not very efficient but works.
 %.o: %.psf
+	$(OBJCOPY) -O elf64-x86-64 -I binary $< $@
+	nm $@
+
+%.o: %.bmp
 	$(OBJCOPY) -O elf64-x86-64 -I binary $< $@
 	nm $@
 
