--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ iso_tmp_data
 boot/UEFI/gnu-efi
 tools/*
 !tools/Makefile
-!tools/initrd.c
-!tools/pf.cpp
+!tools/*.c
+!tools/*.cpp
 initrd.tar.gz
 kernel/files/ter-powerline-v12n.psf
 kernel/files/zap-ext-light20.psf
