Update Github workflows

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  compile:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -77,3 +77,30 @@ jobs:
       with:
         name: FennixProject
         path: FennixProject.iso
+
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'cpp' ]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: ${{ matrix.language }}
+
+  # Here should be build the project? Or it works without?
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
