--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ kernel/files/ter-powerline-v12n.psf
 kernel/files/zap-ext-light20.psf
 kernel/files/zap-ext-light24.psf
 kernel/files/zap-light16.psf
+doxygen-doc
 *.log
 *.drv
 *.o
