--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -154,3 +154,16 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ${{github.workspace}}/flawfinder_results.sarif
+
+  deploydoc:
+    name: Deploy Documentation to GitHub Pages
+    runs-on: ubuntu-latest
+    needs: compile
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Deploy documentation
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: doxygen-doc
