--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -163,6 +163,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install Doxygen
+        run: sudo apt-get install doxygen -y
+
       - name: Deploy documentation
         uses: JamesIves/github-pages-deploy-action@v4
         with:
