GitHub web page now should work

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -169,6 +169,9 @@ jobs:
       - name: Generate Documentation
         run: make doxygen
 
+      - name: Copy GitHub Pages Website
+        run: cp -r tools/website/* doxygen-doc/
+
       - name: Deploy documentation
         uses: JamesIves/github-pages-deploy-action@v4
         with:
