--- a/Makefile.conf
+++ b/Makefile.conf
@@ -20,7 +20,7 @@ COMPILER_PATH = tools/cross/bin
 # The path of the Limine bootloader.
 LIMINE_FOLDER = tools/limine
 
-# The architecture of the compiler (x86_64-elf- will be read as tools/cross/bin/x86_64-elf-gcc)
+# The architecture of the compiler (x86_64-elf- will be read as "tools/cross/bin/x86_64-elf-gcc")
 COMPILER_ARCH = x86_64-elf-
 
 # Qemu path. If you want to use the one you have installed in your system,
