Changed where apps are located and better categorized

--- a/userspace/apps/Makefile
+++ b/userspace/apps/Makefile
@@ -1,30 +1,9 @@
 build:
-	make -C init build
-	make -C monoton build
-	make -C uiserver build
-	make -C wm build
-	make -C fesktop build
-	make -C shutdown build
-	make -C reboot build
-ifneq (,$(wildcard doomgeneric))
-	make -j$(shell nproc) -C doomgeneric build
-else
-	git clone https://github.com/EnderIce2/doomgeneric.git
-	make -j$(shell nproc) -C doomgeneric build
-endif
-
+	make -C games build
+	make -C system build
+	make -C user build
 
 clean:
-	make -C init clean
-	make -C monoton clean
-	make -C uiserver clean
-	make -C wm clean
-	make -C fesktop clean
-	make -C shutdown clean
-	make -C reboot clean
-ifneq (,$(wildcard doomgeneric))
-	make -j$(shell nproc) -C doomgeneric clean
-else
-	git clone https://github.com/EnderIce2/doomgeneric.git
-	make -j$(shell nproc) -C doomgeneric clean
-endif
+	make -C games clean
+	make -C system clean
+	make -C user clean
