--- a/tools/Makefile
+++ b/tools/Makefile
@@ -5,14 +5,18 @@ export PATH := $(CROSS_DIR):$(PATH)
 GCC_CROSS_TARGET=x86_64-elf
 QEMU_VERSION = qemu-7.0.0
 
-all: do_initrd do_e do_limine do_binutils do_gcc do_qemu
+all: do_initrd do_readethernet do_e do_limine do_binutils do_gcc do_qemu
 
 clean:
-	rm -f initrd.elf e.elf
+	rm -f initrd.elf readethernet.elf e.elf
 
 do_initrd:
 	gcc -w initrd.c -o initrd.elf
 	chmod +x initrd.elf
+
+do_readethernet:
+	gcc -w ReadEthernet.c -o readethernet.elf
+	chmod +x readethernet.elf
 
 do_e:
 	g++ -w e.cpp -o e.elf
