--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -20,17 +20,22 @@ jobs:
       run: sudo apt-get install xorriso mtools genisoimage ovmf nasm doxygen -y
 
     - name: Cache cross Folder
-      id: cache-cross
+      id: cache-cross-mttest
       uses: actions/cache@v3
       with:
         path: tools/cross
-        key: ${{ runner.os }}-cross-${{ hashFiles('tools/Makefile') }}
+        key: ${{ runner.os }}-cross-mttest-${{ hashFiles('tools/Makefile') }}
 
     - name: Install GNU Binutils & GNU Compiler Collection
-      if: steps.cache-cross.outputs.cache-hit != 'true'
+      if: steps.cache-cross-mttest.outputs.cache-hit != 'true'
       run: sudo apt-get install build-essential bison flex libgmp3-dev libmpc-dev libmpfr-dev texinfo -y
 
     - name: Tools
+      if: steps.cache-cross-mttest.outputs.cache-hit != 'true'
+      run: make tools
+
+    - name: Tools Workflow
+      if: steps.cache-cross-mttest.outputs.cache-hit != 'false'
       run: make tools_workflow
 
     - name: Build
