--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,9 +7,31 @@ on:
     branches: [ main ]
 
 jobs:
+  deploydoc:
+    name: Deploy Documentation to GitHub Pages
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Doxygen
+        run: sudo apt-get install doxygen make -y
+
+      - name: Generate Documentation
+        run: make doxygen
+
+      - name: Copy GitHub Pages Website
+        run: cp -r tools/website/* doxygen-doc/
+
+      - name: Deploy documentation
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: doxygen-doc
+
   compile:
     name: Compile OS
     runs-on: ubuntu-latest
+    needs: deploydoc
     steps:
     - uses: actions/checkout@v3
 
@@ -154,25 +176,3 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: ${{github.workspace}}/flawfinder_results.sarif
-
-  deploydoc:
-    name: Deploy Documentation to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: compile
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install Doxygen
-        run: sudo apt-get install doxygen make -y
-
-      - name: Generate Documentation
-        run: make doxygen
-
-      - name: Copy GitHub Pages Website
-        run: cp -r tools/website/* doxygen-doc/
-
-      - name: Deploy documentation
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: doxygen-doc
