--- a/Makefile.conf
+++ b/Makefile.conf
@@ -4,7 +4,7 @@ DEBUG = 1
 # Operating system name.
 OSNAME = FennixProject
 # Kernel version.
-KERNEL_VERSION = multitasking-test
+KERNEL_VERSION = bootloader-test
 
 # The path of the cross compiler.
 # If you want to use your own cross compiler (which I don't recommend),
