--- a/limine.cfg
+++ b/limine.cfg
@@ -4,6 +4,7 @@ INTERFACE_BRANDING=Fennix Project
 :Fennix Project (Stivale2)
 # DO NOT EDIT!
 COMMENT=Boot Fennix Project using Stivale2 protocol (Default)
+DEPRECATION_WARNING=no
 RESOLUTION=1280x720
 PROTOCOL=stivale2
 KERNEL_CMDLINE=debug
