--- a/userspace/apps/system/Makefile
+++ b/userspace/apps/system/Makefile
@@ -1,5 +1,6 @@
 build:
 	make -C init build
+	make -C drvmgr
 	make -C monoton build
 	make -C uiserver build
 	make -C wm build
@@ -9,6 +10,7 @@ build:
 
 clean:
 	make -C init clean
+	make -C drvmgr clean
 	make -C monoton clean
 	make -C uiserver clean
 	make -C wm clean
