--- a/limine.cfg
+++ b/limine.cfg
@@ -7,7 +7,7 @@ COMMENT=Boot Fennix Project using Stivale2 protocol (Default)
 DEPRECATION_WARNING=no
 RESOLUTION=1280x720
 PROTOCOL=stivale2
-KERNEL_CMDLINE=debug no4gbcap
+KERNEL_CMDLINE=debug no4gbcap monotasking
 KERNEL_PATH=boot:///kernel.fsys
 MODULE_PATH=boot:///initrd.tar.gz
 MODULE_STRING=ustar
