userspace: text editor stub

--- a/userspace/apps/user/Makefile
+++ b/userspace/apps/user/Makefile
@@ -1,5 +1,7 @@
 build:
 	make -C brainfuckcompiler build
+	make -C texteditor build
 
 clean:
 	make -C brainfuckcompiler clean
+	make -C texteditor clean
