--- a/libc/Makefile
+++ b/libc/Makefile
@@ -3,8 +3,10 @@ build:
 	make -C crt build
 	make -C src build
 	make -C libgcc build
+	make -C libg build
 
 clean:
 	make -C crt clean
 	make -C src clean
 	make -C libgcc clean
+	make -C libg clean
