Support for multiple CPU architectures

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -3,6 +3,10 @@ DEBUG = 1
 
 # Operating system name.
 OSNAME = FennixProject
+
+# OS architecture: amd64, i686, aarch64
+OSARCH = amd64
+
 # Kernel version.
 KERNEL_VERSION = alpha-0.0.1
 
@@ -20,12 +24,29 @@ COMPILER_PATH = tools/cross/bin
 # The path of the Limine bootloader.
 LIMINE_FOLDER = tools/limine
 
-# The architecture of the compiler (x86_64-elf- will be read as "tools/cross/bin/x86_64-elf-gcc")
-COMPILER_ARCH = x86_64-elf-
-
 # Qemu path. If you want to use the one you have installed in your system,
-# change it to /usr/bin/qemu-system-x86_64
-QEMU_PATH = tools/qemu/build/qemu-system-x86_64
+# change it to /usr/bin/qemu-system- (do not include x86_64 or i386, it will be added automatically)
+QEMU_PATH = tools/qemu/build/qemu-system-
 
 # Enable unit testing.
 UNIT_TESTS = 1
+
+
+
+
+
+
+
+
+# make releated variables
+
+ifeq ($(OSARCH), amd64)
+COMPILER_ARCH = amd64-elf-
+QEMU_ARCH = x86_64
+else ifeq ($(OSARCH), i686)
+COMPILER_ARCH = i686-elf-
+QEMU_ARCH = i386
+else ifeq ($(OSARCH), aarch64)
+COMPILER_ARCH = aarch64-elf-
+QEMU_ARCH = aarch64
+endif
